fix: Added changes as per review comment